k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gow-image
  labels:
    app: gow-image
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: gow-image
  templates:
   metadata:
