k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gow-image
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
